fixed the page flicker effect

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -199,17 +199,3 @@ body.modal-open{
     }
   }
 }
-
-/* .modal {
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.3s;
-}
-
-.modal.show {
-  transform: translateX(-50%);
-}
-
-.modal.hide {
-  transform: translateX(200%);
-} */
